rework: Move device selection to body
